<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/active_show_point"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_orange_dark"
        android:orientation="horizontal"
        android:padding="@dimen/header_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_card_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/headerLayout"
        android:layout_marginRight="@dimen/margin_right_card_id_text"
        android:layout_marginTop="@dimen/margin_top_card_id_text_view"
        android:background="@drawable/roundbox"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_left_card_id_text"
        android:gravity="center_vertical" >

        <TextView
            
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label1"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/text_view_card_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_left_card_id_text"
            android:text="@string/card_id"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_card_id"
        android:layout_marginTop="@dimen/margin_top_gridView"
        android:columnWidth="@dimen/gridViewColummWidth"
        android:gravity="center"
        android:numColumns="5"
        android:padding="5dp"
        android:stretchMode="columnWidth" >
    </GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridView1"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_top_textView"
        android:text="@string/screen_2_textView"
        android:textColor="@android:color/black"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/submit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/holo_orange_light"
        android:gravity="center_vertical"
        android:onClick="showPopup"
        android:orientation="horizontal"
        android:padding="@dimen/padding_submit_layout" >

        <ImageView
            android:layout_width="@dimen/logo_1_width"
            android:layout_height="@dimen/logo_1_height"
            android:contentDescription="@string/submit_button"
            android:src="@drawable/arrow_inv" />

        <TextView
            android:id="@+id/submit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_submit_text"
            android:text="@string/submitText"
            android:textColor="@android:color/white"
            android:textSize="@dimen/submit_text_size" />

        <TextView
            android:id="@+id/point_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_point_number_text"
            android:text="@string/point_number_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/point_number_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_pt"
            android:layout_marginTop="@dimen/margin_top_pt"
            android:text="@string/pt"
            android:textColor="@android:color/white"
            android:textSize="@dimen/pt_text_size" />
    </LinearLayout>

</RelativeLayout>