<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/holo_orange_dark"
        android:orientation="horizontal"
        android:padding="@dimen/header_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/header_text_size"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/logo_1"
            android:layout_width="@dimen/logo_1_width"
            android:layout_height="@dimen/logo_1_height"
            android:layout_marginRight="@dimen/logo_1_margin_right"
            android:contentDescription="@string/touch_image_description"
            android:src="@drawable/arrow" />
        <ImageView
            android:id="@+id/logo_2"
            android:layout_width="@dimen/logo_2_width"
            android:layout_height="@dimen/logo_2_height"
            android:contentDescription="@string/touch_image_description"
            android:src="@drawable/card" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_logo"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/margin_top_textView"
        android:text="@string/screen_1_textView"
        android:textColor="@android:color/black"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />

</RelativeLayout>